# Fiori-Inspector

./: .gitignore  Cargo.toml  INSTALAR_Y_USAR.md  README.md  run_studio.sh
config/: local.toml.example
docs/: arquitectura.md  arquitectura_interactiva.md  automatizacion_productiva.md  workflow_lab.md
examples/: static_fiori_fragment.html
src/: automation.rs  browser.rs  config.rs  lib.rs  main.rs  models.rs  report.rs  static_html.rs  studio.rs  workflow.rs
src/js/: ui5_probe.js
static/: app.js  index.html  styles.css
tests/: static_html_tests.rs
workflows/: fiori_sample_workflow.yaml  production_template.yaml
