[package]
name = "fiori-inspector-studio"
version = "0.2.0"
edition = "2021"
authors = ["Angel A. Urbina"]
description = "Interactive Rust studio to inspect SAP Fiori/SAPUI5 DOM, UI5 controls, OData bindings and automation selectors."
license = "MIT"
repository = "https://github.com/ansonTGN/fiori-inspector-studio-rs"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["json"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
regex = "1.10"
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
thirtyfour = { version = "0.34", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "time", "fs", "net", "sync"] }
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4", "serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
